tests/natural_inference_primitive_jsx/natural_inference_primitive_jsx.exp
Error ---------------------------------------------------------------------------------------------------- main.js:10:30

Cannot create `TabGroup` element because union type [1] is incompatible with string [2] in the first parameter of
property `onChange`. [incompatible-type]

   main.js:10:30
   10|   return <TabGroup onChange={setSelectedTab /* TODO okay */} value={selectedTab}>
                                    ^^^^^^^^^^^^^^

References:
   main.js:6:36
    6| declare function setSelectedTab(x: 'a'|'b'): void;
                                          ^^^^^^^ [1]
   main.js:11:16
   11|     <Tab value="a" />
                      ^^^ [2]



Found 1 error
